# Eara-Stellar-Suite

./: README.md
stellar_contracts/contracts/lunarxy-token/: Cargo.toml  Makefile
stellar_contracts/contracts/lunarxy-token/src/: admin.rs  allowance.rs  balance.rs  contract.rs  event.rs  freeze.rs  lib.rs  metadata.rs  seizure.rs  storage_types.rs  test.rs  upgrade.rs
stellar_contracts/contracts/lunarxy-token/test_snapshots/test/: test_add_admin_multisig.1.json  test_add_duplicate_admin_fails.1.json  test_admins_initialized.1.json  test_allowance_zero_balance.1.json  test_approve_and_transfer_from.1.json  test_burn.1.json  test_burn_from_with_allowance.1.json  test_burn_insufficient_balance.1.json  test_burn_while_paused_still_works.1.json  test_cancel_admin_proposal.1.json  test_cancel_threshold_proposal.1.json  test_cancel_upgrade.1.json  test_cancel_upgrade_non_proposer.1.json  test_cannot_freeze_already_frozen.1.json  test_cannot_remove_admin_below_threshold.1.json  test_change_threshold.1.json  test_decimals_is_zero.1.json  test_freeze_cancel_by_proposer.1.json  test_freeze_double_approval_fails.1.json  test_freeze_only_one_proposal_at_a_time.1.json  test_frozen_account_can_receive_admin_mint.1.json  test_frozen_account_cannot_burn_from.1.json  test_frozen_account_cannot_receive_transfer.1.json  test_frozen_transfer_after_unfreeze_works.1.json  test_get_signer_key.1.json  test_handle_upgrade_by_admin.1.json  test_initialize.1.json  test_mint_burn_supply_tracking.1.json  test_mint_by_admin.1.json  test_mint_by_any_admin.1.json  test_mint_fails_non_admin.1.json  (+37 more)
(+270 files in other folders)
